# csv-plot

./: .gitignore  .python-version  README.md  index.md  setup.cfg  setup.py
csv_plot/: __init__.py  background_processor.py  entrypoint.py  fast_pad_and_sample.c  interfaces.py
csv_plot/csv/: gettable.py  pad_and_sample.py  padded_csv_file.py  padded_text_file.py  selector.py  sorted_padded_csv_file.py  splitted_gettable.py  splitted_iterable.py
csv_plot/csv/tests/: test_pad_and_sample.py  (+7 more)
csv_plot/tests/: test_background_processor.py
docs/: example_configuration.yaml  example_file.csv  exampled_configuration.yaml  index.md
easy_plot/: background_processor.py  entrypoint.py  interfaces.py  pad_and_sample.py  padded_csv_file.py  selector.py  sorted_padded_csv_file.py  yolo.py
easy_plot/csv/: __init__.py  pad_and_sample.py  padded_csv_file.py  selector.py  sorted_padded_csv_file.py
easy_plot/tests/: test_pad_and_sample.py  test_padded_csv_file.py  test_padded_text_file.py  test_selector.py  test_sorted_padded_csv_file.py
huge_csv_reader/: pad.py  pad_and_sample.py  padded_csv_file.py  padded_text_file.py  pseudo_hash.py  sample.py  selector.py  sorted_padded_csv_file.py
huge_csv_reader/tests/: test_pad_and_sample.py  test_padded_csv_file.py  test_padded_text_file.py  test_selector.py  test_sorted_padded_csv_file.py
tests/: test_pad.py  test_pad_and_sample.py  test_padded_csv_file.py  test_padded_text_file.py  test_sample.py  test_selector.py  test_sorted_padded_csv_file.py
tests/assets/: double_sampled.csv  not_padded.csv  sampled.csv  sampled_multiple_x.csv  sampled_no_x.csv  sampled_padded.csv
(+42 files in other folders)
