[metadata]
name = csv-plot
description = Easy Plot - Plot CSV files without headaches!

[options]
packages = find:
install_requires = 
    pydantic >= 1.8.0, < 2.0.0
    pyqtgraph >= 0.12.0, < 0.13.0
    pyside6 >= 6.0.0, < 7.0.0
    pyyml >= 0.0.2, < 0.1.0
    typer >= 0.3.0, < 0.4.0


[options.packages.find]
exclude =
    tests*
    
[options.extras_require]
dev =
    pytest >= 6.2.4, < 7
    pytest-cov >= 2.12.1, < 3

[options.entry_points]
console_scripts =
    csv-plot = csv_plot.entrypoint:app